--- a/.github/workflows/sync_leetcode.yml
+++ b/.github/workflows/sync_leetcode.yml
@@ -2,22 +2,20 @@ name: Sync Leetcode
 
 on:
   workflow_dispatch:
-  schedule: 
-    - cron: "0 8 * * *"
-    #this runs once a week. ""0 8 * * 6"
-    #"0 8 * * *" runs at 8:00 AM every day
-    #"0 * * * *" #runs every hour
+  schedule:
+    - cron: "0 8 * * 6"
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions: write-all
 
     steps:
       - name: Sync
-        uses: joshcai/leetcode-sync@v1.7
+        uses: joshcai/leetcode-sync@v1.6
         with:
           github-token: ${{ github.token }}
           leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
-#           destination-folder: my-folder
+          destination-folder: my-folder
+          verbose: true
+          commit-header: '[LeetCode Sync]'
