--- a/.github/workflows/sync_leetcode.yml
+++ b/.github/workflows/sync_leetcode.yml
@@ -2,18 +2,22 @@ name: Sync Leetcode
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 */2 * *"
+  schedule: 
+    - cron: "0 8 * * *"
+    #this runs once a week. ""0 8 * * 6"
+    #"0 8 * * *" runs at 8:00 AM every day
+    #"0 * * * *" #runs every hour
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
       - name: Sync
-        uses: joshcai/leetcode-sync@3d1ad7663d36147c1a432aff6db1beb9912aaef3
+        uses: joshcai/leetcode-sync@v1.6
         with:
           github-token: ${{ github.token }}
           leetcode-csrf-token: ${{ secrets.LEETCODE_CSRF_TOKEN }}
           leetcode-session: ${{ secrets.LEETCODE_SESSION }}
-          commit-header: '[LeetCode Sync]'
+#           destination-folder: my-folder
